# mmai-tactile-grasp

./: .gitignore  LICENSE  README.md
assignments/: hw1_multimodal_epic_kitchens.ipynb
assignments/hw3/: casxzhe_Homework_3_Multimodal_LLMs.ipynb
baselines/: README.md
data/: README.md
data/splits/: test.csv  train.csv  val.csv
notebooks/: opentouch_colab_training.ipynb  opentouch_exploration.ipynb
opentouch/: .gitignore  .gitmodules  README.md  build_label_data.py  build_retrieval_data.py  pyproject.toml  requirements.txt
opentouch/preprocess/: build_demo.py  concat_videos.py  generate_video.py  load_data.py  play_render_tactile.py  play_run_all_demo.py  pyrenderer.py  requirements.txt
opentouch/preprocess/scratch/: handLayoutNewest_meshid.json  handLayoutNewest_meshid_lowres.json  mano_densifincation.py
opentouch/scripts/: download_data.sh  eval.sh  eval_classifier.sh  extract_demo.sh  train.sh  train_classifier.sh  train_classifier_debug.sh  train_debug.sh  train_multigpu.sh
opentouch/src/opentouch/: __init__.py  classification.py  classification_metrics.py  constants.py  factory.py  loss.py  metrics.py  model.py  pose_encoder.py  tactile_encoder.py  visual_encoder.py
opentouch/src/opentouch/model_configs/: OpenTouch-DINOv3-B16-Classify.json  OpenTouch-DINOv3-B16-Retrieval copy.json
opentouch/src/opentouch_train/: classification_data.py  classification_eval.py  classification_main.py  classification_params.py  classification_train.py  data.py  distributed.py  eval.py  logger.py  main.py  params.py  precision.py  scheduler.py  train.py
(+14 files in other folders)
